[gd_scene load_steps=9 format=2]

[ext_resource path="res://script/lava_floor.gd" type="Script" id=1]
[ext_resource path="res://media/boss_fight/lava_floor.png" type="Texture" id=2]
[ext_resource path="res://media/boss_fight/ground_lava.ogg" type="AudioStream" id=3]

[sub_resource type="Animation" id=1]
resource_name = "lava_go"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 0.9, 1.1, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 627, 865 ), Vector2( 627, 865 ), Vector2( 627, 705 ), Vector2( 627, 705 ), Vector2( 627, 875 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AudioStreamPlayer:stream")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AudioStreamPlayer:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 31.8496, 32 )

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 0.938477, 0.047657, 0.047657, 1, 0.93457, 0.765905, 0.0255547, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
direction = Vector3( 0, -10, 0 )
gravity = Vector3( 0, 50, 0 )
initial_velocity = 50.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 4 )

[node name="lava_floor" type="Sprite"]
position = Vector2( 627, 705 )
scale = Vector2( 29.9219, 2.63672 )
texture = ExtResource( 2 )
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/lava_go = SubResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="." groups=[
"attack",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( -16.2757, -20.8593 )
emitting = false
amount = 50
lifetime = 2.0
process_material = SubResource( 5 )

[node name="Particles2D2" type="Particles2D" parent="."]
position = Vector2( 16.4762, -20.8593 )
emitting = false
amount = 50
lifetime = 2.0
process_material = SubResource( 5 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
